# modulo1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  mlflow.db.dvc  mlruns.dvc  pyproject.toml
data/processed/: financial_phrasebank_processed.csv.dvc
data/raw/: financial_phrasebank.csv.dvc
models/: embedding_mlp_model.pt.dvc  tfidf_logistic_model.pkl.dvc
notebooks/: 02_baseline.ipynb  03_hugface_pytorch.ipynb  exploratory.ipynb
reports/: model_metrics.json
scripts/: download_dataset.py  preprocess_dataset.py  probar_prediccion.py  train_mlp.py  train_tfidf.py
src/proyecto/application/app/: main.py  streamlit_app.py
src/proyecto/application/app/pages/: about_project.py  comparacion_modelos.py  dataset_exploration.py
src/proyecto/application/services/: dataset_preprocessing_service.py  decorators.py  prediction_service.py  training_service.py  util.py
src/proyecto/config/: logging.py  settings.py
src/proyecto/data/: schemas.py
src/proyecto/domain/: models_interface.py  schemas.py  sentiment_prediction.py
src/proyecto/evaluation/: metrics.py  reporting.py
src/proyecto/models/: mlp_model.py  pytorch_dataset.py  pytorch_mlp.py  tfidf_logistic_model.py
tests/: conftest.py
tests/integration/: test_tfidf_training_flow.py
tests/unit/: test_metrics.py  test_prediction_service.py  test_preprocessing_service.py  test_reporting.py
