[tool.poetry]
name = "modulo_uno"
version = "0.0.1"
description = "Detección de fraudes (anomalías)"
authors = ["Tu Nombre"]
readme = "README.md"
packages = [{ include = "proyecto", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = ">=2.4.4,<3.0"
pandas = ">=3.0.2,<4.0"
scikit-learn = ">=1.8,<2.0"
torch = ">=2.11,<3.0"
pydantic = ">=2.13.1,<3.0"
pydantic-settings = ">=2.13.1,<3.0"
python-dotenv = ">=1.2.2"
plotly = ">=6.7.0,<7.0"
streamlit = ">=1.56,<2.0"
pre-commit = "^4.6.0"
datasets = "3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.5"
pre-commit = ">=3.5"
ipykernel = ">=6.0"
dvc = "^3.67.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=src/proyecto --cov-report=term-missing"
